/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

import "gogoproto/gogo.proto";

service DriverService {
    rpc InstallDriver (stream InstallDriverRequest) returns (InstallDriverResponse);
}

message InstallDriverRequest {
    oneof driver {
        DriverHeader header = 1;
        DriverChunk chunk = 2;
        DriverTrailer trailer = 3;
    }
}

message InstallDriverResponse {

}

message DriverHeader {
    Driver driver = 1;
}

message DriverChunk {
    bytes data = 1;
}

message DriverTrailer {
    string checksum = 1;
}

message DriverId {
    option (gogoproto.equal) = true;
    string name = 1;
    string version = 2;
}

message DriverMeta {
    DriverId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    uint64 version = 2 [
        (gogoproto.casttype) = "ObjectVersion"
    ];
}

message Driver {
    DriverMeta meta = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}
