/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.management.v1;

import "atomix/runtime/v1/object.proto";
import "gogoproto/gogo.proto";

service ProxyService {
    rpc GetProxy (GetProxyRequest) returns (GetProxyResponse);
    rpc ListProxies (ListProxiesRequest) returns (ListProxiesResponse);
}

message Proxy {
    ObjectMeta meta = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    ProxySpec spec = 2 [
        (gogoproto.nullable) = false
    ];
    ProxyStatus status = 3 [
        (gogoproto.nullable) = false
    ];
}

message ProxySpec {
    string type = 1;
}

message ProxyStatus {
    ObjectId binding = 1;
}

message GetProxyRequest {
    ObjectId proxy_id = 1 [
        (gogoproto.customname) = "ProxyID",
        (gogoproto.nullable) = false
    ];
}

message GetProxyResponse {
    Proxy proxy = 1;
}

message ListProxiesRequest {
    string type = 1;
    bool watch = 2;
}

message ListProxiesResponse {
    repeated Proxy proxies = 1;
}
